fix Add new Part menu not showing

--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -129,6 +129,9 @@
     overflow: hidden;
 }
 
+.buttonsContainer {
+    position: relative;
+}
 
 .buttonsContainer2 {
     display: grid;
